--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -723,7 +723,7 @@ strong {
         background-image: url('../images/artists/marcha.jpg');
     }
     .schedule-table .infantil-background-image {
-        background-image: url('../images/artists/infantil.jpg');
+        background-image: url('../images/artists/infantil.JPG');
     }
     .schedule-table .concierto-background-image {
         background-image: url('../images/artists/concierto.jpg');
