--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -11,15 +11,15 @@ https://templatemo.com/tm-583-festava-live
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
 :root {
-    --blue-custom: #1D4965;
-    --red-custom: #FF2C4D;
+    --blue-custom: #062744;
+    --red-custom: #ff0023;
     --yellow-dark-custom: #fbbb0d;
-    --yellow-light-custom: #EADEBF;
+    --yellow-light-custom: #ffd88a;
     --white-color: #ffffff;
     --primary-color: #ffffff;
     --secondary-color: #FF2C4D;
     --third-color: #fbbb0d;
-    --forth-color: #EADEBF;
+    --forth-color: #ffd88a;
     --section-bg-color: #f0f8ff;
     --custom-btn-bg-hover-color: #FF2C4D;
     --custom-btn-bg-color: #1D4965;
