--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -17,11 +17,11 @@ https://templatemo.com/tm-583-festava-live
     --yellow-light-custom: #ffd88a;
     --white-color: #ffffff;
     --primary-color: #ffffff;
-    --secondary-color: #FF2C4D;
+    --secondary-color: #ff0023;
     --third-color: #fbbb0d;
     --forth-color: #ffd88a;
     --section-bg-color: #f0f8ff;
-    --custom-btn-bg-hover-color: #FF2C4D;
+    --custom-btn-bg-hover-color: #ff0023;
     --custom-btn-bg-color: #1D4965;
     --dark-color: #000000;
     --p-color: #717275;
